--- a/package.json
+++ b/package.json
@@ -2,9 +2,17 @@
   "name": "react-typescript",
   "version": "1.0.0",
   "description": "React and TypeScript example starter project",
-  "keywords": ["typescript", "react", "starter"],
+  "keywords": [
+    "typescript",
+    "react",
+    "starter"
+  ],
   "main": "src/index.tsx",
   "dependencies": {
+    "@emotion/react": "11.10.5",
+    "@emotion/styled": "11.10.5",
+    "@mui/base": "5.0.0-alpha.111",
+    "@mui/material": "5.11.1",
     "jotai": "https://pkg.csb.dev/pmndrs/jotai/commit/2d0d4ad9/jotai",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -22,5 +30,10 @@
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
   },
-  "browserslist": [">0.2%", "not dead", "not ie <= 11", "not op_mini all"]
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
